Add release node

--- a/content/zh/docs/release-note/v1.10.13/v1.10.13-lts.1.md
+++ b/content/zh/docs/release-note/v1.10.13/v1.10.13-lts.1.md
@@ -4,6 +4,15 @@ title: v1.10.13-lts.1
 
 ## 补丁
 
-- [CVE-2020-8558](/zh/docs/patches/cve-2020-8558/)
+- [CVE-2019-11245](/zh/docs/patches/cve-2019-11245/)
+- [CVE-2019-1002101](/zh/docs/patches/cve-2019-1002101/)
+- [CVE-2019-11246](/zh/docs/patches/cve-2019-11246/)
+- [CVE-2019-11247](/zh/docs/patches/cve-2019-11247/) TODO
+- [CVE-2019-11248](/zh/docs/patches/cve-2019-11248/)
+- [CVE-2019-11249](/zh/docs/patches/cve-2019-11249/)
+- [CVE-2019-11251](/zh/docs/patches/cve-2019-11251/)
+- [CVE-2020-8552](/zh/docs/patches/cve-2020-8552/)
+- [CVE-2020-8558](/zh/docs/patches/cve-2020-8558/) TODO
+- [CVE-2020-8559](/zh/docs/patches/cve-2020-8559/) TODO
 - [CVE-2021-3121](/zh/docs/patches/cve-2021-3121/)
 - [nokmem](/zh/docs/patches/nokmem/)
