--- a/content/zh/docs/release-note/v1.12.10/v1.12.10-lts.1.md
+++ b/content/zh/docs/release-note/v1.12.10/v1.12.10-lts.1.md
@@ -4,12 +4,12 @@ title: v1.12.10-lts.1
 
 ## 补丁
 
-- [CVE-2019-11245](/zh/docs/patches/cve-2019-11245/)
-- [CVE-2019-11247](/zh/docs/patches/cve-2019-11247/)
-- [CVE-2019-11249](/zh/docs/patches/cve-2019-11249/)
-- [CVE-2019-11251](/zh/docs/patches/cve-2019-11251/)
-- [CVE-2020-8552](/zh/docs/patches/cve-2020-8552/)
-- [CVE-2020-8558](/zh/docs/patches/cve-2020-8558/)
-- [CVE-2020-8559](/zh/docs/patches/cve-2020-8559/) TODO
-- [CVE-2021-3121](/zh/docs/patches/cve-2021-3121/)
-- [nokmem](/zh/docs/patches/nokmem/)
+- {{< link url="/docs/patches/cve-2019-11245/" >}}
+- {{< link url="/docs/patches/cve-2019-11247/" >}}
+- {{< link url="/docs/patches/cve-2019-11249/" >}}
+- {{< link url="/docs/patches/cve-2019-11251/" >}}
+- {{< link url="/docs/patches/cve-2020-8552/" >}}
+- {{< link url="/docs/patches/cve-2020-8558/" >}}
+- {{< link url="/docs/patches/cve-2020-8559/" >}} TODO
+- {{< link url="/docs/patches/cve-2021-3121/" >}}
+- {{< link url="/docs/patches/nokmem/" >}}
