--- a/content/zh/docs/release-note/v1.15.12/v1.15.12-lts.1.md
+++ b/content/zh/docs/release-note/v1.15.12/v1.15.12-lts.1.md
@@ -4,6 +4,6 @@ title: v1.15.12-lts.1
 
 ## 补丁
 
-- [CVE-2020-8558](/zh/docs/patches/cve-2020-8558/)
-- [CVE-2021-3121](/zh/docs/patches/cve-2021-3121/)
-- [nokmem](/zh/docs/patches/nokmem/)
+- {{< link url="/docs/patches/cve-2020-8558/" >}}
+- {{< link url="/docs/patches/cve-2021-3121/" >}}
+- {{< link url="/docs/patches/nokmem/" >}}
