--- a/content/zh/docs/release-note/v1.16.15/v1.16.15-lts.1.md
+++ b/content/zh/docs/release-note/v1.16.15/v1.16.15-lts.1.md
@@ -4,5 +4,5 @@ title: v1.16.15-lts.1
 
 ## 补丁
 
-- [CVE-2021-3121](/zh/docs/patches/cve-2021-3121/)
-- [nokmem](/zh/docs/patches/nokmem/)
+- {{< link url="/docs/patches/cve-2021-3121/" >}}
+- {{< link url="/docs/patches/nokmem/" >}}
