Add description for display and update release

--- a/content/zh/docs/releases/v1.10.13/v1.10.13-lts.1.md
+++ b/content/zh/docs/releases/v1.10.13/v1.10.13-lts.1.md
@@ -4,15 +4,15 @@ title: v1.10.13-lts.1
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2019-11245/" >}}
-- {{< link url="/docs/patches/cve-2019-1002101/" >}}
-- {{< link url="/docs/patches/cve-2019-11246/" >}}
-- {{< link url="/docs/patches/cve-2019-11247/" >}} TODO
-- {{< link url="/docs/patches/cve-2019-11248/" >}}
-- {{< link url="/docs/patches/cve-2019-11249/" >}}
-- {{< link url="/docs/patches/cve-2019-11251/" >}}
-- {{< link url="/docs/patches/cve-2020-8552/" >}}
-- {{< link url="/docs/patches/cve-2020-8558/" >}} TODO
-- {{< link url="/docs/patches/cve-2020-8559/" >}} TODO
-- {{< link url="/docs/patches/cve-2021-3121/" >}}
-- {{< link url="/docs/patches/nokmem/" >}}
+- {{< link url="/docs/patches/cve-2019-11245/" display="description" >}}
+- {{< link url="/docs/patches/cve-2019-1002101/" display="description" >}}
+- {{< link url="/docs/patches/cve-2019-11246/" display="description" >}}
+- TODO {{< link url="/docs/patches/cve-2019-11247/" display="description" >}}
+- {{< link url="/docs/patches/cve-2019-11248/" display="description" >}}
+- {{< link url="/docs/patches/cve-2019-11249/" display="description" >}}
+- {{< link url="/docs/patches/cve-2019-11251/" display="description" >}}
+- {{< link url="/docs/patches/cve-2020-8552/" display="description" >}}
+- TODO {{< link url="/docs/patches/cve-2020-8558/" display="description" >}}
+- TODO {{< link url="/docs/patches/cve-2020-8559/" display="description" >}}
+- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/patches/nokmem/" display="description" >}}
