--- a/content/zh/docs/releases/v1.14.10/v1.14.10-lts.1.md
+++ b/content/zh/docs/releases/v1.14.10/v1.14.10-lts.1.md
@@ -4,8 +4,8 @@ title: v1.14.10-lts.1
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2020-8552/" >}}
-- {{< link url="/docs/patches/cve-2020-8558/" >}}
-- {{< link url="/docs/patches/cve-2020-8559/" >}}
-- {{< link url="/docs/patches/cve-2021-3121/" >}}
-- {{< link url="/docs/patches/nokmem/" >}}
+- {{< link url="/docs/patches/cve-2020-8552/" display="description" >}}
+- {{< link url="/docs/patches/cve-2020-8558/" display="description" >}}
+- {{< link url="/docs/patches/cve-2020-8559/" display="description" >}}
+- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/patches/nokmem/" display="description" >}}
