--- a/content/zh/docs/releases/v1.15.12/v1.15.12-lts.1.md
+++ b/content/zh/docs/releases/v1.15.12/v1.15.12-lts.1.md
@@ -4,6 +4,6 @@ title: v1.15.12-lts.1
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2020-8558/" >}}
-- {{< link url="/docs/patches/cve-2021-3121/" >}}
-- {{< link url="/docs/patches/nokmem/" >}}
+- {{< link url="/docs/patches/cve-2020-8558/" display="description" >}}
+- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/patches/nokmem/" display="description" >}}
