--- a/content/zh/docs/releases/v1.17.17/v1.17.17-lts.1.md
+++ b/content/zh/docs/releases/v1.17.17/v1.17.17-lts.1.md
@@ -4,5 +4,5 @@ title: v1.17.17-lts.1
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2021-3121/" >}}
-- {{< link url="/docs/patches/nokmem/" >}}
+- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/patches/nokmem/" display="description" >}}
