--- a/content/zh/docs/releases/v1.18.20/v1.18.20-lts.1.md
+++ b/content/zh/docs/releases/v1.18.20/v1.18.20-lts.1.md
@@ -4,4 +4,4 @@ title: v1.18.20-lts.1
 
 ## 补丁
 
-- {{< link url="/docs/patches/nokmem/" >}}
+- {{< link url="/docs/patches/nokmem/" display="description" >}}
