--- a/content/zh/docs/releases/v1.18.20/v1.18.20-lts.1.md
+++ b/content/zh/docs/releases/v1.18.20/v1.18.20-lts.1.md
@@ -10,3 +10,4 @@ short_description: |
 ## 补丁
 
 - {{< link url="/docs/patches/nokmem/" display="description" >}}
+- {{< link url="/docs/patches/cve-2021-25741/" display="description" >}}
