Migrate the Kubernetes

--- a/content/zh/docs/kubernetes/releases/v1.12.10/v1.12.10-lts.1.md
+++ b/content/zh/docs/kubernetes/releases/v1.12.10/v1.12.10-lts.1.md
@@ -2,19 +2,19 @@
 title: v1.12.10-lts.1
 weight: -1
 short_description: |
-  这是 KLTS 发布的第一个 v1.12.10 修复版本。
+  这是 KLTS Kubernetes 发布的第一个 v1.12.10 修复版本。
 ---
 
-这是 KLTS 发布的第一个 v1.12.10 修复版本。
+这是 KLTS Kubernetes 发布的第一个 v1.12.10 修复版本。
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2019-11245/" display="description" >}}
-- {{< link url="/docs/patches/cve-2019-11247/" display="description" >}}
-- {{< link url="/docs/patches/cve-2019-11249/" display="description" >}}
-- {{< link url="/docs/patches/cve-2019-11251/" display="description" >}}
-- {{< link url="/docs/patches/cve-2020-8552/" display="description" >}}
-- {{< link url="/docs/patches/cve-2020-8558/" display="description" >}}
-- TODO {{< link url="/docs/patches/cve-2020-8559/" display="description" >}}
-- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
-- {{< link url="/docs/patches/nokmem/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2019-11245/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2019-11247/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2019-11249/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2019-11251/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2020-8552/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2020-8558/" display="description" >}}
+- TODO {{< link url="/docs/kubernetes/patches/cve-2020-8559/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/nokmem/" display="description" >}}
