--- a/content/zh/docs/kubernetes/releases/v1.17.17/v1.17.17-lts.1.md
+++ b/content/zh/docs/kubernetes/releases/v1.17.17/v1.17.17-lts.1.md
@@ -2,12 +2,12 @@
 title: v1.17.17-lts.1
 weight: -1
 short_description: |
-  这是 KLTS 发布的第一个 v1.17.17 修复版本。
+  这是 KLTS Kubernetes 发布的第一个 v1.17.17 修复版本。
 ---
 
-这是 KLTS 发布的第一个 v1.17.17 修复版本。
+这是 KLTS Kubernetes 发布的第一个 v1.17.17 修复版本。
 
 ## 补丁
 
-- {{< link url="/docs/patches/cve-2021-3121/" display="description" >}}
-- {{< link url="/docs/patches/nokmem/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/cve-2021-3121/" display="description" >}}
+- {{< link url="/docs/kubernetes/patches/nokmem/" display="description" >}}
