--- a/content/zh/docs/kubernetes/releases/v1.20/v1.20.15-lts.2.md
+++ b/content/zh/docs/kubernetes/releases/v1.20/v1.20.15-lts.2.md
@@ -2,11 +2,11 @@
 title: v1.20.15-lts.1
 weight: -1
 short_description: |
-  This is the first fixed release by KLTS for v1.20.15.
+  这是 KLTS 发布的第二个 v1.20.15 修复版本。
 ---
 
-This is the first fixed release by KLTS for v1.20.15.
+这是 KLTS 发布的第二个 v1.20.15 修复版本。
 
-## Patches
+## 补丁
 
 - {{< link url="/docs/kubernetes/patches/nokmem/" display="description" >}}
